# Chihiro

./: README.md  docker-compose.yml  pyproject.toml
ChihiroSearch/: Dockerfile  pyproject.toml
ChihiroSearch/ChihiroSearch/: settings.py
ChihiroSearch/search/: models.py  views.py
ChihiroSearch/templates/: result.html
ChihiroSpider/: Dockerfile  pyproject.toml  startup.sh
ChihiroSpider/ChihiroSpider/: items.py  settings.py
ChihiroSpider/ChihiroSpider/models/: es_types.py
ChihiroSpider/ChihiroSpider/spiders/: JianshuSpider.py  QuotesSpider.py
