[tool.poetry]
name = "chihiro"
version = "0.1.0"
description = ""
authors = ["fanqingsong <qsfan@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scrapy ="^2.0.1"
scrapy-redis = "^0.6.8"
elasticsearch = "^7.6.0"
elasticsearch-dsl = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
