[tool.poetry]
name = "chihirosearch"
version = "0.1.0"
description = "Chihiro search"
license = "MIT"
authors = ["Qingsong <qsfan@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
elasticsearch = "^7.6.0"
elasticsearch-dsl = "^7.1.0"
Django = "^3.0.14"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

