[tool.poetry]
name = "chihirospider"
version = "0.1.0"
description = "Chihiro spider"
license = "MIT"
authors = ["Qingsong <qsfan@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "2.5.1"
scrapy-redis = "0.6.8"
elasticsearch = "^7.6.0"
elasticsearch-dsl = "^7.1.0"
cryptography = "36.0.2"
pyOpenSSL = "22.0.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

